# Android-Client

./: .gitattributes  .gitignore  .gitleaksignore  LICENSE  PLAY_STORE_LISTING.md  README.md  SECURITY.md  build.gradle.kts  gradlew  gradlew.bat  local.properties.example  settings.gradle.kts  setup-ios.sh  store-listing.md  version.properties
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: android.yml  codeql.yml  ios.yml  secret-scan.yml
app/: build.gradle.kts  gradle.lockfile  proguard-rules.pro
app/src/androidTest/java/app/birdo/vpn/ui/screen/: ConsentScreenTest.kt  LoginScreenTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/app/birdo/vpn/: BirdoApp.kt  MainActivity.kt
app/src/main/java/app/birdo/vpn/data/api/: AuthInterceptor.kt  BirdoApi.kt
app/src/main/java/app/birdo/vpn/data/auth/: TokenManager.kt
app/src/main/java/app/birdo/vpn/data/billing/: BillingRepository.kt
app/src/main/java/app/birdo/vpn/data/model/: Models.kt
app/src/main/java/app/birdo/vpn/data/network/: DohResolver.kt  NetworkMonitor.kt
app/src/main/java/app/birdo/vpn/data/preferences/: AppPreferences.kt
app/src/main/java/app/birdo/vpn/data/repository/: BirdoRepository.kt
app/src/main/java/app/birdo/vpn/di/: NetworkModule.kt
app/src/main/java/app/birdo/vpn/service/: AutoReconnectService.kt  BirdoTileService.kt  BirdoVpnService.kt  RosenpassKeyStore.kt  RosenpassManager.kt  RosenpassNative.kt  TunnelMonitor.kt  VpnManager.kt  VpnNotificationManager.kt  WgNative.kt  WireGuardConfigBuilder.kt  XrayManager.kt
app/src/main/java/app/birdo/vpn/ui/: TestTags.kt
app/src/main/java/app/birdo/vpn/ui/components/: AdaptiveContainer.kt  AppIconMark.kt  PixelCanvas.kt  WorldGlobe.kt  WorldLandmask.kt
app/src/main/java/app/birdo/vpn/ui/navigation/: BirdoNavGraph.kt  Screen.kt
app/src/main/java/app/birdo/vpn/ui/screen/: ConsentScreen.kt  HomeScreen.kt  LoginScreen.kt  MultiHopScreen.kt  PortForwardScreen.kt  ProfileScreen.kt  ServerListScreen.kt  SettingsScreen.kt  SpeedTestScreen.kt  SplitTunnelScreen.kt  SubscriptionScreen.kt  VpnSettingsScreen.kt
app/src/main/java/app/birdo/vpn/ui/theme/: Brand.kt  Color.kt  Theme.kt  Type.kt
app/src/main/java/app/birdo/vpn/ui/viewmodel/: AuthViewModel.kt  BillingViewModel.kt  SettingsViewModel.kt  SpeedTestViewModel.kt  VpnViewModel.kt
app/src/main/java/app/birdo/vpn/utils/: FlagUtils.kt  FormatUtils.kt  InputValidator.kt  NativeLibraryVerifier.kt  RootDetector.kt  SettingsHmac.kt  SpeedTestUtil.kt
app/src/main/java/app/birdo/vpn/widget/: BirdoWidget.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_notif_connected.xml  ic_notif_connecting.xml  ic_notif_disconnected.xml  ic_notif_error.xml  ic_vpn_key.xml  ic_vpn_tile.xml  widget_bg_connected.xml  widget_bg_disconnected.xml
app/src/main/res/layout/: widget_loading.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: birdo_widget_info.xml  network_security_config.xml
app/src/test/java/app/birdo/vpn/data/auth/: TokenManagerTest.kt
app/src/test/java/app/birdo/vpn/data/network/: DohResolverTest.kt
app/src/test/java/app/birdo/vpn/data/repository/: BirdoRepositoryTest.kt
app/src/test/java/app/birdo/vpn/service/: BirdoVpnServiceTest.kt  RosenpassManagerTest.kt  VpnManagerTest.kt  XrayManagerTest.kt
app/src/test/java/app/birdo/vpn/ui/viewmodel/: AuthViewModelTest.kt
app/src/test/java/app/birdo/vpn/utils/: InputValidatorTest.kt
docs/: CODE_SIGNING.md  IOS_TESTING_ON_MAC.md  PROTOCOL-ROADMAP.md  RELEASE-SECRETS.md  VERIFICATION.md  azure-keyvault-signing-setup.md  store-listing.md
iosApp/: project.yml
iosApp/PacketTunnel/: Info.plist  PacketTunnel.entitlements  PacketTunnelProvider.swift
iosApp/iosApp/: BirdoVPNApp.swift  ContentView.swift  Info.plist
iosApp/iosApp/Services/: APIClient.swift  BirdoPQManager.swift  KeychainService.swift  StoreKitService.swift  VPNManager.swift
iosApp/iosApp/Theme/: BirdoTheme.swift
iosApp/iosApp/ViewModels/: AuthViewModel.swift  SettingsViewModel.swift  VpnViewModel.swift
iosApp/iosApp/Views/: BiometricGate.swift  ConsentView.swift  HomeView.swift  LoginView.swift  MultiHopView.swift  PortForwardView.swift  ServerListView.swift  SettingsView.swift  SpeedTestView.swift  SubscriptionView.swift  VpnSettingsView.swift
native/: .gitignore  README.md  ROADMAP.md  build.ps1  build.sh
native/birdo-pq-ios/: Cargo.toml
native/birdo-pq-ios/include/: birdo_pq_ios.h  module.modulemap
native/birdo-pq-ios/src/: lib.rs
native/birdo-pq-server/: Cargo.toml  README.md
native/birdo-pq-server/src/: main.rs
native/rosenpass-jni/: Cargo.toml
native/rosenpass-jni/src/: errors.rs  handshake.rs  lib.rs
screenshots/: README.md
scripts/: build-birdo-pq-xcframework.sh  capture-screenshots.ps1  generate-store-assets.ps1
shared/: build.gradle.kts
shared/src/androidMain/kotlin/app/birdo/vpn/shared/: Platform.android.kt
shared/src/commonMain/kotlin/app/birdo/vpn/shared/: Platform.kt
shared/src/commonMain/kotlin/app/birdo/vpn/shared/model/: Models.kt
shared/src/commonMain/kotlin/app/birdo/vpn/shared/util/: FlagUtils.kt  FormatUtils.kt  InputValidator.kt
shared/src/iosMain/kotlin/app/birdo/vpn/shared/: Platform.ios.kt
store-assets/: generate_assets.py  generate_tablet_screenshots.py  generate_youtube_banner.py
