[package]
name = "rosenpass-jni"
version = "0.2.0"
edition = "2021"
publish = false
description = "BirdoPQ post-quantum WireGuard PSK derivation — JNI bindings for the Birdo Android client."
license = "Apache-2.0"

[lib]
name = "rosenpass_jni"
crate-type = ["cdylib"]

[dependencies]
# JNI surface
jni = { version = "0.21", default-features = false }

# Logging into Android logcat from Rust
log = "0.4"
android_logger = "0.13"

# Crypto primitives — HKDF + SHA-256 for the final PSK derivation
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"
zeroize = { version = "1.7", features = ["zeroize_derive"] }

# Random for ephemeral material (uses the OS CSPRNG via getrandom)
rand_core = { version = "0.6", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["std"] }

# Post-quantum primitive: ML-KEM-1024 (FIPS 203), the strongest standardised
# NIST PQ KEM. Public key ~1568 B, ciphertext ~1568 B, shared secret 32 B.
# This is the same KEM Mullvad uses in their PQ-PSK product.
pqcrypto-mlkem = "0.1"
pqcrypto-traits = "0.3"

# Encoding for keys / handshake messages on the wire
base64 = "0.22"

[dev-dependencies]
hex = "0.4"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
overflow-checks = true

[profile.release-with-debug]
inherits = "release"
strip = "none"
debug = true
